feat: create api keys service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,6 +24,7 @@ spring.security.oauth2.client.registration.google.scope=profile,email
 paystack.secret.key=${PAYSTACK_SECRET_KEY}
 paystack.public.key=${PAYSTACK_PUBLIC_KEY}
 paystack.base.url=https://api.paystack.co
+paystack.callback.url=http://localhost:8080/api/v1/wallet/verify-payment
 
 # Logging
 logging.level.com.wallet=DEBUG
