fix: configure Swagger to use HTTPS for Railway deployment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,5 @@ paystack.callback.url=http://localhost:8080/wallet/verify-payment
 # Logging
 logging.level.com.wallet=DEBUG
 logging.level.org.springframework.security=DEBUG
+
+server.forward-headers-strategy=framework
