fix: fix paystack redirect url

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,7 +25,7 @@ spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/o
 paystack.secret.key=${PAYSTACK_SECRET_KEY}
 paystack.public.key=${PAYSTACK_PUBLIC_KEY}
 paystack.base.url=https://api.paystack.co
-paystack.callback.url=http://localhost:8080/wallet/verify-payment
+paystack.callback.url=https://masterchief-walletservice.up.railway.app/wallet/verify-payment
 
 
 # Logging
